Added sort button

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -106,3 +106,8 @@ body {
     margin-top: 2rem;
     border-radius: 10px;
 }
+#our-products {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
