Fixed rendering of index and updated script.js

--- a/views/partials/index-cont.hbs
+++ b/views/partials/index-cont.hbs
@@ -1,3 +1,4 @@
+<!-- TODO: Move onclick events to script.js -->
 <nav class="navbar">
     <img src = "https://via.placeholder.com/200x50?text=Logo+Here" alt="Logo">
     <a href="#home">Home</a>
