--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,11 @@
 <head>
-    {{{header}}}
+    {{> header }}
     <title>Flower Buds Boutique</title>
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="js/script.js" defer></script>
+    
 </head>
 
 <body>
-    {{{index-cont}}}
+    {{> index-cont }}
+    <script src="js/script.js"></script>
 </body>
