--- a/views/partials/index-cont.hbs
+++ b/views/partials/index-cont.hbs
@@ -23,12 +23,15 @@
         <span id="our-products">
             <h2>Our Products</h2>
             <span>
-                <label for="#sort-by">Sort By: </label>
-                <select id="sort-by">
+                <label for="#filter">Sort By: </label>
+                <select id="filter">
                     <option>None</option>
-                    <option value="type">Type</option>
-                    <option value="occasion">Occasion</option>
-                    <option value="color">Color</option>
+                    <!--<option value="color-red">Color: Red</option>
+                    <option value="color-yellow">Color: Yellow</option>-->
+                    <option value="occasion-any">Occasion: Any</option>
+                    <option value="type-arrangement">Type: Arrangement</option>
+                    <option value="type-bouquet">Type: Bouquet</option>
+                    <option value="type-garden">Type: Garden</option>
                 </select> 
             </span>
         </span>
