Added color filters

--- a/views/partials/index-cont.hbs
+++ b/views/partials/index-cont.hbs
@@ -26,8 +26,9 @@
                 <label for="#filter">Sort By: </label>
                 <select id="filter">
                     <option>None</option>
-                    <!--<option value="color-red">Color: Red</option>
-                    <option value="color-yellow">Color: Yellow</option>-->
+                    <option value="color-mixed">Color: Mixed</option>
+                    <option value="color-red">Color: Red</option>
+                    <option value="color-yellow">Color: Yellow</option>
                     <option value="occasion-any">Occasion: Any</option>
                     <option value="type-arrangement">Type: Arrangement</option>
                     <option value="type-bouquet">Type: Bouquet</option>
