Added products stock

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -92,6 +92,10 @@ body {
 .product button:hover {
     background-color: #ffd700;
 }
+button:disabled:hover {
+    background-color: #ffe5b4;
+    cursor: default;
+}
 #cart {
     position: fixed;
     right: 1rem;
