Updated script.js and index-cont.hbs

--- a/views/partials/index-cont.hbs
+++ b/views/partials/index-cont.hbs
@@ -23,7 +23,7 @@
         <span id="our-products">
             <h2>Our Products</h2>
             <span>
-                <label for="#filter">Sort By: </label>
+                <label for="filter">Sort By: </label>
                 <select id="filter">
                     <option>None</option>
                     <option value="color-mixed">Color: Mixed</option>
