Moved onclick events from index-cont.hbs to script.js

--- a/views/partials/index-cont.hbs
+++ b/views/partials/index-cont.hbs
@@ -1,4 +1,3 @@
-<!-- TODO: Move onclick events to script.js -->
 <nav class="navbar">
     <img src = "https://via.placeholder.com/200x50?text=Logo+Here" alt="Logo">
     <a href="#home">Home</a>
@@ -14,8 +13,8 @@
             <img src="https://via.placeholder.com/1200x400?text=Beautiful+Flowers+1" alt="Slideshow 1" class="active">
             <img src="https://via.placeholder.com/1200x400?text=Colorful+Arrangements+2" alt="Slideshow 2">
             <img src="https://via.placeholder.com/1200x400?text=Elegant+Bouquets+3" alt="Slideshow 3">
-            <button class="slideshow-btn prev" onclick="changeSlide(-1)">&#10094;</button>
-            <button class="slideshow-btn next" onclick="changeSlide(1)">&#10095;</button>
+            <button class="slideshow-btn prev">&#10094;</button>
+            <button class="slideshow-btn next">&#10095;</button>
         </div>
     </section>
 
