--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,6 +3,7 @@
     
     <title>Flower Buds Boutique</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="https://kit.fontawesome.com/64f41baef5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
