--- a/views/partials/index-cont.hbs
+++ b/views/partials/index-cont.hbs
@@ -3,7 +3,12 @@
     <a href="#home">Home</a>
     <a href="#products">Products</a>
     <a href="#about-contact">About & Contact</a>
-    <div id="cart">Cart: 0 items</div>
+    <div class="nav-icons">
+        <a href="cart.html" class="icon-link">
+            <i class="fa-solid fa-cart-shopping"></i>
+        </a>
+        <div id="cart">Cart: 0 items</div>
+    </div>
 </nav>
 
 <div class="container">
