Cart page backend complete

--- a/views/partials/cart-cont.hbs
+++ b/views/partials/cart-cont.hbs
@@ -15,7 +15,7 @@
                 <p>Quantity: {{this.quantity}}</p>
             </div>
         {{else}}
-            <p>Your cart is empty.</p> <!-- Message if cart is empty -->
+            <p>Your cart is empty.</p> 
         {{/each}}
     </div>
     <div id="cart-total">
