--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -9,6 +9,6 @@
 <body>
     {{> cart-cont }}
     
-    <script src="js/script.js"></script>
-    <script src="js/checkout.js"></script>
+    <script src="js/script.js" defer></script>
+    <script src="js/checkout.js" defer></script>
 </body>
