--- a/views/partials/signup-cont.hbs
+++ b/views/partials/signup-cont.hbs
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="login-box">
         <h2>Sign Up</h2>
-        <form id="signup-form">
+        <form id="signup-form" action="/api/users/create" method="post">
             <div class="form-group">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
