Added utils and updated login/signup files

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -8,5 +8,6 @@
 <body>
     {{> login-cont }}
     
-    <script src="js/login.js"></script>
+    <script src="js/utils.js" type="module"></script>
+    <script src="js/login.js" type="module"></script>
 </body>
