--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -8,5 +8,6 @@
 <body>
     {{> signup-cont }}
     
-    <script src="js/signup.js"></script>
+    <script src="js/utils.js" type="module"></script>
+    <script src="js/signup.js" type="module"></script>
 </body>
