Updated login, sign up, etc.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,5 +9,6 @@
 <body>
     {{> index-cont }}
     
-    <script src="js/script.js"></script>
+    <script src="js/utils.js" type="module"></script>
+    <script src="js/script.js" type="module"></script>
 </body>
