--- a/views/partials/login-cont.hbs
+++ b/views/partials/login-cont.hbs
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-auth">
     <img src="https://via.placeholder.com/200x50?text=Logo+Here" alt="Logo" class="logo">
     <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="index.html#products">Products</a>
-        <a href="index.html#about-contact">About & Contact</a>
+        <a href="/">Home</a>
+        <a href="/#products">Products</a>
+        <a href="/#about-contact">About & Contact</a>
     </div>
 </nav>
 
