--- a/views/partials/index-cont.hbs
+++ b/views/partials/index-cont.hbs
@@ -10,9 +10,11 @@
     {{/if}}
     <div class="nav-icons">
         <a href="/cart" class="icon-link">
-            <i class="fa-solid fa-cart-shopping"></i>
+            <span id="cartSpan">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <div id="cart">Cart</div>
+            </span>
         </a>
-        <div id="cart">Cart</div>
     </div>
 </nav>
 
