--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: Poppins, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #fff;
     color: #333;
 }
 .navbar {
-    background-color: #f8e3e3;
+    background-color: #F8E3E3;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
@@ -14,11 +16,42 @@ body {
     position: sticky;
     top: 0;
     z-index: 1000;
+    font-family: Poppins;
 }
 
 .logo {
     max-width: 200px;
     height: auto;
+}
+
+.nav-icons {
+    display: flex;
+    gap: 1rem;
+}
+
+.icon-link {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.nav-cart-icon{
+    max-width: 45px;
+    height: 45px;
+}
+
+.divider {
+    width: 1px;
+    height: 30px;
+    background-color: #333;
+    margin: 0 1rem;
+    align-self: center;
+}
+
+.nav-login-icon {
+    max-width: 45px;
+    height: 45px;
 }
 
 .nav-links {
@@ -39,8 +72,10 @@ body {
     margin: 0 1rem;
 }
 
-.navbar a:hover {
-    color: #ffd700;
+.navbar .nav-links a:hover {
+    color: #574142;
+    border-bottom: 3px solid #574142;
+    padding-bottom: 0.5rem;
 }
 
 .navbar-auth .nav-links {
@@ -94,118 +129,325 @@ body {
 }
 .products {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 2rem;
-    margin-top: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1rem;
 }
 .product {
-    border: 1px solid #e0f0e0;
+    border: 1px solid #e0e0e0;
+    border-radius: 8px;
     padding: 1rem;
-    text-align: center;
-    background-color: #f0fff0;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+    position: relative;
+    max-width: 250px;
 }
 .product img {
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+    object-fit: cover;
+    height: 150px;
 }
 .product h3 {
-    margin: 1rem 0;
+    font-size: 1em;
+    margin: 0.5rem 0;
+    color: #333;
+}
+.amount-sold {
+    font-size: 0.9em;
+    color: #555;
+    margin-top: 0.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    gap: 4px;
 }
 .product button {
-    background-color: #ffe5b4;
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    background-color: #333;
+    color: #fff;
     border: none;
     padding: 0.5rem 1rem;
+    border-radius: 50%;
     cursor: pointer;
-    transition: background-color 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.product button:disabled {
+    background-color: #e0e0e0;
+    color: #888;
+    cursor: not-allowed;
+}
+
 .product button:hover {
     background-color: #ffd700;
 }
+
 .product.out-of-stock img {
     opacity: 0.5;
 }
+
 .product.out-of-stock button {
     background-color: #ccc;
     cursor: not-allowed;
 }
+
 .product.out-of-stock button:hover {
     background-color: #ccc;
 }
+
 #cart-count {
     font-weight: bold;
 }
+
 #cart {
     position: static;
     background-color: transparent;
     padding: 0;
     border-radius: 0;
 }
+
+.cart-icon {
+    font-size: 1.2em;
+}
+
 .about-contact {
-    background-color: #f0f8ff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffc5ff;
     padding: 2rem;
     margin-top: 2rem;
     border-radius: 10px;
-}
-
-.login-box {
-    max-width: 400px;
-    margin: 50px auto;
-    padding: 2rem;
-    background-color: #f0fff0;
-    border: 1px solid #e0f0e0;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.login-box h2 {
     text-align: center;
-    margin-bottom: 1.5rem;
+    font-family: Poppins, sans-serif;
+}
+
+.about-contact h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    color: #424242;
+}
+
+.about-contact-content {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 2rem;
+    width: 100%;
+    margin-top: 1rem;
+}
+
+.contact-info, .about-info {
+    flex: 1;
+    max-width: 200px;
+    text-align: left;
+}
+
+.contact-info h3, .about-info h3 {
+    font-size: 1.2rem;
+    color: #424242;
+}
+
+.contact-info p, .about-info p {
+    font-size: 0.9rem;
+    color: #4f4f4f;
+    margin: 0.5rem 0;
+}
+
+.social-media {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 1.5rem;
+}
+
+.about-contact .divider {
+    width: 1px;
+    height: 20px;
+    background-color: #333;
+    margin: 0 1rem;
+    margin-bottom: 5px;
+    align-self: center;
+}
+
+.social-media a img {
+    width: 50px;
+    height: 50px;
+}
+
+.copyright {
+    margin-top: 2rem;
+    font-size: 0.8rem;
+    color: #666;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+}
+
+.login-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+.login-layout {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    background-color: #f8f8f8;
+    overflow: hidden;
+}
+
+/* Left image section */
+.login-image {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    height: 100%;
+    background-color: #e0e0e0;
+}
+
+/* Right form section */
+.login-form-box {
+    flex: 1;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #f8e3e3;
+}
+
+.login-logo {
+    display: block;
+    margin: 0 auto;
+    width: 300px;
+    height: auto;
+    margin-bottom: 1rem;
+}
+
+.login-form-box h2 {
+    font-size: 1.8rem;
+    text-align: center;
     color: #333;
+    margin-bottom: 1rem;
+}
+
+.login-form-box h3 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 1rem;
+    text-align: center;
 }
 
 .form-group {
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
 }
 
 .form-group label {
     display: block;
-    margin-bottom: 0.5rem;
+    font-size: 0.9rem;
     color: #333;
+    margin-bottom: 0.5rem;
 }
 
 .form-group input {
     width: 100%;
-    padding: 0.5rem;
-    border: 1px solid #e0f0e0;
+    padding: 0.8rem;
+    border: 1px solid #ddd;
     border-radius: 5px;
 }
 
-.login-box button {
+.username-group {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.password-group {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.form-group .show-password i {
+    position: absolute;
+    right: 20px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 20px;
+    color: #e38eda;
+    transition: color 0.3s ease-in-out;
+}
+
+.form-options {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 0.9rem;
+    color: #555;
+    margin-bottom: 1.5rem;
+}
+
+.form-group, .form-options {
+    margin-bottom: 1rem;
+}
+
+.password-hint {
+    font-size: 0.8rem;
+    color: #777;
+    margin-top: 0.5rem;
+}
+
+.forgot-password {
+    text-decoration: none;
+    color: #e38eda;
+}
+
+.forgot-password:hover {
+    text-decoration: underline;
+}
+
+.login-form-box button {
     width: 100%;
-    padding: 0.75rem;
-    background-color: #ffe5b4;
+    padding: 0.8rem;
+    background-color: #e38eda;
+    color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 1rem;
     transition: background-color 0.3s;
 }
 
-.login-box button:hover {
-    background-color: #ffd700;
+.login-form-box button:hover {
+    background-color: #1A5150;
 }
 
-.login-box p {
+.signup-text {
     text-align: center;
+    font-size: 0.9rem;
     margin-top: 1rem;
 }
 
-.login-box a {
-    color: #333;
+.signup-text a {
+    color: #e38eda;
     text-decoration: none;
     font-weight: bold;
 }
 
-.login-box a:hover {
+.signup-text a:hover {
     text-decoration: underline;
 }
 
