Dynamic admin button rendering

--- a/views/partials/cart-cont.hbs
+++ b/views/partials/cart-cont.hbs
@@ -1,8 +1,10 @@
 <nav class="navbar">
     <img src="https://via.placeholder.com/200x50?text=Logo+Here" alt="Logo">
-    <a href="/">Home</a>
-    <a href="#products">Products</a>
-    <a href="#about-contact">About & Contact</a>
+    <div id="navbar" class="nav-links"> 
+        <a href="/">Home</a>
+        <a href="#products">Products</a>
+        <a href="#about-contact">About & Contact</a>
+    </div>
 </nav>
 
 <div class="container">
