--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -625,3 +625,83 @@ label[for="paymentMethod"] {
     align-items: center;
     gap: 10px;
 }
+
+/* Admin Styles */
+
+.table-container {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.table-container h2 {
+    text-align: center; 
+    margin-bottom: 15px; 
+}
+
+.product-table {
+    width: 80%;
+    border-collapse: collapse;
+    margin: 30px auto;
+    font-size: 1em;
+    font-family: 'Arial', sans-serif;
+    background-color: #f8f9fa;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.product-table th, .product-table td {
+    padding: 12px 20px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+.product-table th {
+    background-color: #F8E3E3;
+    color: #000000;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.product-table tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.product-table tr:hover {
+    background-color: #f1f1f1;
+    cursor: pointer;
+}
+
+button {
+    padding: 8px 16px;
+    font-size: 1em;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    margin-right: 10px;
+}
+
+.edit-btn {
+    background-color: #F8E3E3; 
+    color: black;
+}
+
+.edit-btn:hover {
+    background-color: #45a049;
+    transform: scale(1.05);
+}
+
+.delete-btn {
+    background-color: #F8E3E3; 
+    color: black;
+}
+
+.delete-btn:hover {
+    background-color: #e53935;
+    transform: scale(1.05);
+}
+
+button:hover {
+    transform: translateY(-2px);
+}
