--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -572,6 +572,30 @@ body {
     width: 80%;
 }
 
+#qr-code-section, #confirmation-section {
+    padding: 20px;
+    border: 1px solid #b4b3b3;
+    margin-bottom: 20px;
+    width: 97%;
+}
+
+#qr-code-section h3, #confirmation-section h3 {
+    margin-bottom: 15px;
+    color: #333;
+}
+
+#qr-code-section img {
+    width: 400px;
+    height: 400px;
+    display: block;
+    margin: 0 auto 15px; 
+}
+
+#confirmation-section p {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
 .close-btn {
     color: #aaa;
     float: right;
