--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -637,6 +637,11 @@ label[for="paymentMethod"] {
     margin-bottom: 15px; 
 }
 
+.btn-container {
+    width: 80%;
+    margin: 30px auto;
+}
+
 .product-table {
     width: 80%;
     border-collapse: collapse;
@@ -666,7 +671,7 @@ label[for="paymentMethod"] {
     background-color: #f2f2f2;
 }
 
-.product-table tr:hover {
+.prouct-table tr:hover {
     background-color: #f1f1f1;
     cursor: pointer;
 }
