Updated login, signup, test files

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,7 @@
 <head>
     {{> header }}
     
-    <title>Flower Buds Boutique</title>
+    <title>Login | Flower Buds Boutique</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
