--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,7 +1,7 @@
 <head>
     {{> header }}
     
-    <title>Sign Up - Flower Buds Boutique</title>
+    <title>Sign Up | Flower Buds Boutique</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
