Profile page and order cancellation

--- a/views/partials/admin-cont.hbs
+++ b/views/partials/admin-cont.hbs
@@ -5,6 +5,13 @@
         <a href="#products">Products</a>
         <a href="#about-contact">About & Contact</a>
     </div>
+    <div class="nav-icons"></div>
+        <a href="/profile" class="profile-link">
+            <div class="profile-circle">
+                <img src="https://via.placeholder.com/40x40?text=User" alt="Profile">
+            </div>
+        </a>
+    </div>
 </nav>
 
 <body>
