Updated navbar elements

--- a/views/partials/admin-cont.hbs
+++ b/views/partials/admin-cont.hbs
@@ -2,8 +2,8 @@
     <img src="https://via.placeholder.com/200x50?text=Logo+Here" alt="Logo">
     <div id="navbar" class="nav-links">
         <a href="/">Home</a>
-        <a href="#products">Products</a>
-        <a href="#about-contact">About & Contact</a>
+        <a href="/#products">Products</a>
+        <a href="/#about-contact">About & Contact</a>
     </div>
     <div class="nav-icons"></div>
         <a href="/profile" class="profile-link">
