--- a/views/partials/cart-cont.hbs
+++ b/views/partials/cart-cont.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar">
-    <img src="https://via.placeholder.com/200x50?text=Logo+Here" alt="Logo">
+    <img src="images/logofinal.png" alt="Logo">
     <div id="navbar" class="nav-links"> 
         <a href="/">Home</a>
         <a id="log" 
@@ -12,7 +12,7 @@
     <div class="nav-icons"></div>
         <a href="/profile" class="profile-link">
             <div class="profile-circle">
-                <img src="https://via.placeholder.com/40x40?text=User" alt="Profile">
+                <img src="images/Profile.png" alt="Profile">
             </div>
         </a>
     </div>
