--- a/views/partials/index-cont.hbs
+++ b/views/partials/index-cont.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar">
-    <img src="https://via.placeholder.com/200x50?text=Logo+Here" alt="Logo">
+    <img src="/images/logofinal.png" alt="Logo" class="logo">
     <div id="navbar" class="nav-links">
         <a href="#products">Products</a>
         <a href="#about-contact">About & Contact</a>
@@ -19,7 +19,7 @@
         </a>
         <a href="/profile" class="profile-link">
             <div class="profile-circle">
-                <img src="https://via.placeholder.com/40x40?text=User" alt="Profile">
+                <img src="/images/Profile.png" alt="Profile">
             </div>
         </a>
     </div>
@@ -29,9 +29,9 @@
     <section id="home">
         <h1>Welcome to Flower Buds Boutique</h1>
         <div class="slideshow">
-            <img src="https://via.placeholder.com/1200x400?text=Beautiful+Flowers+1" alt="Slideshow 1" class="active">
-            <img src="https://via.placeholder.com/1200x400?text=Colorful+Arrangements+2" alt="Slideshow 2">
-            <img src="https://via.placeholder.com/1200x400?text=Elegant+Bouquets+3" alt="Slideshow 3">
+            <img src="/images/product1.png" alt="Slideshow 1" class="active">
+            <img src="/images/product2.png" alt="Slideshow 2">
+            <img src="/images/product3.png" alt="Slideshow 3">
             <button class="slideshow-btn prev">&#10094;</button>
             <button class="slideshow-btn next">&#10095;</button>
         </div>
