--- a/views/partials/profile-cont.hbs
+++ b/views/partials/profile-cont.hbs
@@ -1,12 +1,12 @@
 <nav class="navbar">
-    <img src="https://via.placeholder.com/200x50?text=Logo+Here" alt="Logo">
+    <img src="/images/logofinal.png" alt="Logo" class="logo">
     <div id="navbar" class="nav-links"> 
         <a href="/">Home</a>
     </div>
     <div class="nav-icons"></div>
         <a href="/profile" class="profile-link">
             <div class="profile-circle">
-                <img src="https://via.placeholder.com/40x40?text=User" alt="Profile">
+                <img src="/images/Profile.png" alt="Profile">
             </div>
         </a>
     </div>
@@ -22,7 +22,7 @@
   <div class="container">
     <div class="profile-header">
       <div class="profile-image">
-        <img src="https://via.placeholder.com/80x80?text=User" alt="User Profile">
+        <img src="/images/Profile.png" alt="User Profile">
       </div>
       <div>
         <h1>{{user.username}}</h1>
