--- a/views/partials/signup-cont.hbs
+++ b/views/partials/signup-cont.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-auth">
-    <img src="https://via.placeholder.com/200x50?text=Logo+Here" alt="Logo" class="logo">
+    <img src="/images/logofinal.png" alt="Logo" class="logo">
     <div class="nav-links">
         <a href="/">Home</a>
         <a href="/#products">Products</a>
