--- a/views/partials/admin-cont.hbs
+++ b/views/partials/admin-cont.hbs
@@ -1,14 +1,14 @@
 <nav class="navbar">
-    <img src="https://via.placeholder.com/200x50?text=Logo+Here" alt="Logo">
+    <img src="images/logofinal.png" alt="Logo" class="logo">
     <div id="navbar" class="nav-links">
         <a href="/">Home</a>
-        <a href="#products">Products</a>
-        <a href="#about-contact">About & Contact</a>
+        <a href="/#products">Products</a>
+        <a href="/#about-contact">About & Contact</a>
     </div>
     <div class="nav-icons"></div>
         <a href="/profile" class="profile-link">
             <div class="profile-circle">
-                <img src="https://via.placeholder.com/40x40?text=User" alt="Profile">
+                <img src="/images/Profile.png" alt="Profile">
             </div>
         </a>
     </div>
