--- a/views/partials/login-cont.hbs
+++ b/views/partials/login-cont.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-auth">
-    <img src="https://via.placeholder.com/200x50?text=Logo+Here" alt="Logo" class="logo">
-    <div class="nav-links">
+    <img src="/images/logofinal.png" alt="Logo" class="logo">
+    <div id="navbar" class="nav-links">
         <a href="/">Home</a>
         <a href="/#products">Products</a>
         <a href="/#about-contact">About & Contact</a>
@@ -8,19 +8,34 @@
 </nav>
 
 <div class="container">
-    <div class="login-box">
-        <h2>Login</h2>
-        <form id="login-form" action="/api/login" method="post">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
+    <div class="login-container">
+        <div class="login-layout">
+            <!-- Left side with image placeholder -->
+            <div class="login-image">
+                <img src="/images/LoginImage.png" class="login-image">
             </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
+            <!-- Right side with login form -->
+            <div class="login-form-box">
+                <a href="index.html">
+                    <img src="/images/logofinal.png" class="login-logo">
+                </a>
+                <form id="login-form">
+                    <div class="form-group username-group">
+                        <input type="text" id="username" name="username" placeholder="Username" required>
+                    </div>
+                    <div class="form-group password-group">
+                        <span class="show-password"><i class="fas fa-eye"></i></span>
+                        <input type="password" id="password" name="password" placeholder="Password" required>
+                    </div>
+                    <p class="password-hint">It must be a combination of minimum 8 letters, numbers, and symbols.</p>
+                    <div class="form-options">
+                        <label><input type="checkbox" name="remember"> Remember me</label>
+                        <a href="#" class="forgot-password">Forgot Password?</a>
+                    </div>
+                    <button type="submit">Log In</button>
+                </form>
+                <p class="signup-text">No account yet? <a href="signup.html">Sign Up</a></p>
             </div>
-            <button type="submit">Login</button>
-        </form>
-        <p>Don't have an account? <a href="/signup">Sign up</a></p>
+        </div>
     </div>
 </div>
