--- a/views/partials/login-cont.hbs
+++ b/views/partials/login-cont.hbs
@@ -19,7 +19,7 @@
                 <a href="index.html">
                     <img src="/images/logofinal.png" class="login-logo">
                 </a>
-                <form id="login-form">
+                <form id="login-form" action="/api/login" method="post">
                     <div class="form-group username-group">
                         <input type="text" id="username" name="username" placeholder="Username" required>
                     </div>
