Fixed script and login-cont

--- a/views/partials/login-cont.hbs
+++ b/views/partials/login-cont.hbs
@@ -16,7 +16,7 @@
             </div>
             <!-- Right side with login form -->
             <div class="login-form-box">
-                <a href="index.html">
+                <a href="/">
                     <img src="/images/logofinal.png" class="login-logo">
                 </a>
                 <form id="login-form" action="/api/login" method="post">
@@ -34,7 +34,7 @@
                     </div>
                     <button type="submit">Log In</button>
                 </form>
-                <p class="signup-text">No account yet? <a href="signup.html">Sign Up</a></p>
+                <p class="signup-text">No account yet? <a href="/signup">Sign Up</a></p>
             </div>
         </div>
     </div>
