--- a/views/partials/cart-cont.hbs
+++ b/views/partials/cart-cont.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar">
-    <img src="images/logofinal.png" alt="Logo">
+    <img src="images/logofinal.png" alt="Logo" class="logo">
     <div id="navbar" class="nav-links"> 
         <a href="/">Home</a>
     </div>
